# auto-empiric

./: .gitignore  AutoEmpiric.sln  README.md
src/AutoEmpiric.API/: AutoEmpiric.API.csproj  Program.cs  appsettings.json
src/AutoEmpiric.API/Controllers/: MissionController.cs
src/AutoEmpiric.Agents.Python/: pyproject.toml  requirements.txt
src/AutoEmpiric.Agents.Python/autoempiric_agents/: __init__.py  base_agent.py  confidence_calibrator.py  llm_client.py
src/AutoEmpiric.Agents.Python/tests/: __init__.py  test_agents.py
src/AutoEmpiric.Core/: Orchestrator.cs
src/AutoEmpiric.Core/Interfaces/: IAgent.cs  ISandboxEngine.cs  IValidator.cs
src/AutoEmpiric.Core/Models/: ConfidenceScore.cs  ValidationResult.cs
src/AutoEmpiric.Core/Services/: BasicAgent.cs  EmpiricalValidator.cs  InProcessSandboxEngine.cs
src/AutoEmpiric.Sandbox.Rust/: Cargo.toml
src/AutoEmpiric.Sandbox.Rust/src/: lib.rs  main.rs
src/AutoEmpiric.Sandbox.Rust/src/execution/: mod.rs  runner.rs
src/AutoEmpiric.Sandbox.Rust/src/isolation/: cgroups.rs  mod.rs
src/AutoEmpiric.Sandbox.Rust/tests/: sandbox_tests.rs
tests/AutoEmpiric.Core.Tests/: AutoEmpiric.Core.Tests.csproj  OrchestratorTests.cs  ValidationTests.cs
