[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoempiric-agents-python"
version = "0.1.0"
description = "Cognitive logic and LLM interaction layer"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.19.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]
[WARNING] --raw-output is enabled. Model output is not sanitized and may contain harmful ANSI sequences (e.g. for phishing or command injection). Use --accept-raw-output-risk to suppress this warning.