[package]
name = "autoempiric-sandbox"
version = "0.1.0"
edition = "2021"
description = "Sandbox environment for executing generated code in an isolated and secure manner"
publish = false

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
nix = "0.27"
libc = "0.2"
[WARNING] --raw-output is enabled. Model output is not sanitized and may contain harmful ANSI sequences (e.g. for phishing or command injection). Use --accept-raw-output-risk to suppress this warning.